--- a/index.html
+++ b/index.html
@@ -1,82 +1,64 @@
-
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-    <!-- CSS Style link -->
     <link rel="stylesheet" href="./css/styles.css" />
-    <!-- «B13» All fonts and their variations are linked from Google Fonts Services -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <title>My Homework #2</title>
 </head>
 <body>
-    <!-- This is the header tag that wraps the navigation options, web logo and  contacts info as well -->
     <header class="top-line">
-        <!-- Nav tag as well known as Navigation wrapper -->
         <nav>
-            <!-- This is the LOGO usually used in image or text as well, clickable for homepage only  -->
             <a href="./index.html" class="logo"><span class="logo-colored">web</span>studio</a>
-            <!-- This is navigation list or option is resposible for exploring the webpage -->
             <ul class="menu-nav unstyle-list">
-                <li><a href="./index.html" class="nav active">Studio</a></li><!-- class Active will be highlighted the current page-->
+                <li><a href="./index.html" class="nav active">Studio</a></li>
                 <li><a href="./portfolio.html" class="nav">Portfolio</a></li>
-                <li><a href="./" class="nav">Contacts</a></li><!-- Contact will be in default link -->
+                <li><a href="./" class="nav">Contacts</a></li>
             </ul>
         </nav>
-        <!-- 
-            This the Contact links, mostly in the rightside of navigation, reponsible for 
-            contacting email, telephone number, mobile number and 
-            social media links(fb,twitter,instagram,etc) 
-        -->
         <ul class="menu-contact unstyle-list">
             <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
-    <!-- this is the Main tag that wraps the content of the webpage. -->
     <main>
-        <!-- The main topic and content of the page -->
         <section class="hero-image">
-            <!-- This is the heading 1 tag only use once. -->
             <h1 class="hero-top-banner">
                 Effective Solutions <br />
                 for Your Business
             </h1>
-            <!-- This is the button tag. It has many action event for e.g. submitting your username and password-->
             <button type="button" class="btn-primary">Order Service</button>
         </section>
         <section>
-            <!-- Section 1 of the content-->
             <ul class="feature-section unstyle-list">
                 <li>
                     <h3 class="feat-title">Strategy</h3>
                     <p class="feat-desc">
-                        Our goal is to identify the business<br />
-                        problem to walk away with the <br />
+                        Our goal is to identify the business
+                        problem to walk away with the 
                         perfect and creative solution. 
                     </p>    
                 </li>
                 <li>
                     <h3 class="feat-title">Punctuality</h3>
                     <p class="feat-desc">
-                        Bring the key message to the <br />
-                        brand's audience for the best price </br />
+                        Bring the key message to the 
+                        brand's audience for the best price 
                         within the shortest possible time.
                     </p>
                 </li>
                 <li>
                     <h3 class="feat-title">Diligence</h3>
                     <p class="feat-desc">
-                        Research and confirm brands that <br />
-                        present the strongest digital growth <br />
+                        Research and confirm brands that 
+                        present the strongest digital growth 
                         opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
                     <h3 class="feat-title">Technologies</h3>
                     <p class="feat-desc">
-                        Design practice focused on digital <br />
-                        experiences. We bring forth a deep <br />
+                        Design practice focused on digital 
+                        experiences. We bring forth a deep 
                         passion for problem-solving.
                     </p>
                 </li>
@@ -84,7 +66,6 @@
         </section>
         <section>
             <h2 class="section-title">What Are We Doing</h2>
-            <!-- This is list of images,All image are stored in root folder /images -->
             <ul class="card unstyle-list">
                 <li>
                     <img src="images/monitor.jpg" alt="Monitor" width="360" />
@@ -131,11 +112,10 @@
             </ul>
         </section>
     </main>
-    <!-- This is the footer tag that wraps the logo, contact info, costumer services, FAQ etc. -->
     <footer class="footer">
         <a href="./index.html" class="logo"><span class="logo-colored">web</span>studio</a><br>
-        <p>Increase the flow of customers and <br />
-            sales for your business with digital <br />
+        <p>Increase the flow of customers and 
+            sales for your business with digital 
             marketing & growth solutions.
         </p>
     </footer>
