--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
     <footer class="footer">
         <a href="./index.html" class="logo"><span class="logo-colored">web</span>studio</a><br />
         <p>Increase the flow of customers and 
-            sales for your business with digital
+            <br/>sales for your business with digital
             marketing & growth solutions.
         </p>
     </footer>
