goit-markup-hw-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
         <a href="./index.html" class="logo"><span class="logo-colored">web</span>studio</a><br />
         <p>Increase the flow of customers and 
             <br/>sales for your business with digital
-            marketing & growth solutions.
+            <br/>marketing & growth solutions.
         </p>
     </footer>
 </body>
