--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <footer class="footer">
         <a href="./index.html" class="logo"><span class="logo-colored">web</span>studio</a><br>
         <p>Increase the flow of customers and 
-            <br/>sales for your business with digital 
-            <br/>marketing & growth solutions.
+            <br>sales for your business with digital 
+            <br>marketing & growth solutions.
         </p>
     </footer>
 </body>
